--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     "phpunit/phpunit": "^9.5 || ^10",
     "psr/http-message": "^1 || ^2",
     "react/http": "^1.6",
-    "react/promise": "^3.0",
-    "rector/rector": "^0.17.0",
+    "react/promise": "^2 || ^3",
+    "rector/rector": "^0.17",
     "symfony/polyfill-php81": "^1.23",
     "symfony/var-exporter": "^5 || ^6",
     "thecodingmachine/safe": "^1.3 || ^2"
@@ -55,7 +55,8 @@
     "allow-plugins": {
       "composer/package-versions-deprecated": true,
       "ergebnis/composer-normalize": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": false
     },
     "preferred-install": "dist",
     "sort-packages": true
